--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,6 @@
 .main-section {
   border-radius: 5px;
-  width: 1000px;
+  width: 1300px;
   margin-top: 80px;
 }
 
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   margin-right: 25px;
-  width: 900px;
+  width: 70%;
 }
 .top-menu {
   display: flex;
@@ -109,7 +109,48 @@
   color: #818181;
 }
 .main-section-aside {
-  width: 400px;
+  width: 30%;
   background-color: #fff;
   border-radius: 4px;
+  padding: 10px;
+}
+.main-section-aside-title{
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 25px;
+  font-weight: 500;
+}
+#add-post-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.add-post-form-element{
+  cursor: pointer;
+  padding: 10px 30px 10px 15px;
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(137, 137, 137, 0.5);
+}
+#post-content{
+  height: 150px;
+  resize: none;
+}
+#post-content:focus{
+  outline: none !important;
+}
+#submit-post{
+  background-color: #0079d3;
+  color: #FFF;
+  font-weight: 600;
+}
+
+.new-to-reddit{
+  margin-top: 10px;
+}
+.new-to-reddit a {
+  display: inline;
+  color: #0079d3;
+  margin-left: 10px;
 }
