--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,19 +85,23 @@ a {
   font-weight: 500;
 }
 .login,
-.home {
+.home,
+.logout {
   border: 1px solid #0079d3;
   color: #0079d3;
 }
 #login,
-#home {
+#home,
+#logout {
   color: #0079d3;
   width: 100%;
   height: 100%;
 }
-.register {
+.register,
+.porfile {
   background-color: #0079d3;
 }
-#register {
+#register,
+#porfile {
   width: 100px;
 }
