--- a/public/css/home.css
+++ b/public/css/home.css
@@ -93,7 +93,7 @@
 .post-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 .post-footer {
   display: flex;
@@ -113,6 +113,7 @@
   background-color: #fff;
   border-radius: 4px;
   padding: 10px;
+  height: 350px;
 }
 .main-section-aside-title{
   text-align: center;
