--- a/public/css/home.css
+++ b/public/css/home.css
@@ -135,7 +135,6 @@
   justify-content: space-between;
 }
 .add-post-form-element {
-  cursor: pointer;
   padding: 10px 30px 10px 15px;
   width: 100%;
   margin-bottom: 10px;
@@ -150,11 +149,14 @@
   outline: none !important;
 }
 #submit-post {
+  cursor: pointer;
   background-color: #0079d3;
   color: #fff;
   font-weight: 600;
 }
-
+.link{
+  cursor: pointer;
+}
 .new-to-reddit {
   margin-top: 10px;
 }
